// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render with given locale 1`] = `
<div>
  <span
    class="ghostIndicator"
  >
    de-at
  </span>
</div>
`;

exports[`Should render with given locale and className 1`] = `
<div>
  <span
    class="ghostIndicator test"
  >
    de-at
  </span>
</div>
`;
